--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 section.pricing {
-    background: #007bff;
-    background: linear-gradient(to right, #0062E6, #33AEFF);
+    background: #16A085;
+    background: linear-gradient(to right, #16A085, #1ABC9C);
   }
   
   .pricing .card {
@@ -16,7 +16,7 @@ section.pricing {
   
   .pricing .card-title {
     margin: 0.5rem 0;
-    font-size: 1.5rem;
+    font-size: 6rem;
     letter-spacing: .1rem;
     font-weight: bold;
   }
@@ -41,11 +41,13 @@ section.pricing {
   .pricing .btn {
     font-size: 80%;
     border-radius: 5rem;
+    border-color: #1ABC9C;
     letter-spacing: .1rem;
     font-weight: bold;
     padding: 1rem;
     opacity: 0.7;
     transition: all 0.2s;
+    background: linear-gradient(to right, #16A085, #1ABC9C);
   }
   
   /* Hover Effects on Card */
